{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 31,
  "lineage": "769c6ecc-6464-380a-9d13-c7a909f48719",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/networkInterfaces/vnic",
            "internal_domain_name_suffix": "ec4untj01juutalk1y3rn1jxjc.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/publicIPAddresses/public-ip",
                "subnet_id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
              }
            ],
            "location": "uksouth",
            "name": "vnic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "casopractico2"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/networkSecurityGroups/security-group",
            "location": "uksouth",
            "name": "security-group",
            "resource_group_name": "casopractico2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sshrule",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/networkSecurityGroups/security-group/securityRules/http",
            "name": "http",
            "network_security_group_name": "security-group",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "casopractico2",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.secgroup",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.145.95.45",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "public-ip",
            "resource_group_name": "casopractico2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "casopractico2",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
            "network_security_group_id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/networkSecurityGroups/security-group",
            "subnet_id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.secgroup",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cd46bd20-da3a-4969-816a-de3b16ed374a",
            "id": "/subscriptions/fbc00290-4d54-4443-8339-b3863db01413/resourceGroups/casopractico2/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "uksouth",
            "name": "vnet1",
            "resource_group_name": "casopractico2"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}